refactor: Extract SQS message polling, processing, and DLQ handling into dedicated components.